pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/pr14544.rkt
#;
(exn-pred (regexp-quote "in: (define (f x y z) (+ y z))"))
#lang typed/racket

(: f (-> Number Number Number))
(define (f x y z) (+ y z))
